# gns

./: .gitignore  AGENTS.md  INFERENCE_GUIDE.md  README.md  WCSPH法.md  analyze_rollouts.py  config.yaml  config_dev.yaml  config_dev_valid.yaml  config_full.yaml  config_full_valid.yaml  config_kaggle.yaml  config_kaggle_rollout.yaml  config_local.yaml  config_quick.yaml  config_quick_valid.yaml  config_rollout.yaml  config_rollout_small.yaml  config_small.yaml  config_tiny.yaml  config_tiny_valid.yaml  events.out.tfevents.1769257828.67dfc2b552d0.64.0  events.out.tfevents.1769400859.1a37746e8af7.63.0  fluid-dynamics.html  fluid-dynamics.md  freefall.html  freefall.npz  graph_network.py  main.py  memo.md  my-todo.md  noise_utils.py  pyproject.toml  reading_utils.py  run_inference.sh  simtest.py  tb_loss_plot.ipynb  tmp_inline_case.yaml  tmp_tank_sloshing_mid_800.yaml  train.py  (+14 more)
.codex/: AGENTS.md
datasets/: __init__.py  config.yaml
datasets/config/: fluid.yaml  fluid_kaggle.yaml  fluid_small.yaml
datasets/scripts/: __init__.py  animate.py  dataset_utils.py  gen_fluid.py  gen_pymunk.py
gns_kaggle/: __init__.py  gns_kaggle_pipeline.ipynb  pipeline.py
kaggle/: pipeline.py
kaggle/dataset/: .pipeline_version  dataset-metadata.json
kaggle/dataset/_code_tmp/: analyze_rollouts.py  config_rollout.yaml  config_rollout_small.yaml  run_inference.sh  visualize_rollout.py
kaggle/dataset/_code_tmp/src/: data_loader.py  learned_simulator.py  losses.py  simulator_factory.py  train.py  trainer.py
kaggle/kernal/: kernel-metadata.json  train-valid.ipynb
kaggle/kernal_infer/: infer-dt.ipynb  kernel-metadata.json
sim/: freefall.py
src/: data_loader.py  graph_network.py  hamiltonian_sph.py  learned_simulator.py  noise_utils.py  predictor.py  reading_utils.py  rollout_utils.py  scenarios.py  simulator_factory.py  train.py  train_config.py  train_paths.py  train_utils.py  trainer.py
tests/: test_smoke.py
tools/: kaggle_pipeline.sh  run_seeds.py
viz/: animate.py  loaders.py  plots.py
