[project]
name = "gns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy>=2.3.3", "pyyaml>=6.0.2", "tqdm>=4.67.1", "wrapt>=2.0.1"]

[dependency-groups]
dev = ["ruff>=0.14.1", "pytest>=7.4.2"]
full = [
  "h5py>=3.14.0",
  "matplotlib>=3.10.7",
  "pysph>=1.0b2",
  "pymunk>=7.1.0",
  "tensorboard>=2.20.0",
  "torch-geometric>=2.7.0",
  "torch>=2.7.0",
  "torchvision>=0.22.0",
]

[tool.uv]
# デフォルトで heavy な full グループを含める（通常の uv sync は全依存を入れる）
# 使用例:
#   uv sync                         # これまで通り全依存（dev+full）をインストール
#   uv sync --no-default-groups     # 軽量セットのみ
#   uv sync --no-default-groups --group dev   # 軽量+dev
default-groups = ["dev", "full"]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu129", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu129", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
ignore = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D107",
  "D400",
  "D415",
  "D203",
  "D205",
  "D213",
  "COM812",
  "ISC001",
  "ANN201",
  "S101",
  "T201",
  "RET504",
  "PLR0913",
]
select = ["ALL"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.mypy]
ignore_missing_imports = true
